src/tests/integration/snapshots/mosaic__tests__integration__compatibility__fish_paste_multiline.snap
---
source: src/tests/integration/compatibility.rs
expression: snapshot
---
                                                                                                                                                     
 OS: 5.9.14-arch1-1 GNU/Linux                                                                                                                        
 Uptime: 12 hours, 21 minutes                                                                                                                        
 Hostname: kingdom                                                                                                                                   
 Disk usage:                                                                                                                                         
                                                                                                                                                     
df: /run/user/1000/doc: Operation not permitted                                                                                                      
	/	295G / 514G  61%                                                                                                                                  
	/efi	 27M /  96M  28%                                                                                                                               
                                                                                                                                                     
 Network:                                                                                                                                            
                                                                                                                                                     
	wlp2s0  192.168.0.3                                                                                                                                 
                                                                                                                                                     
[I] [21:58] kingdom:mosaic (main) | echo -ne (\                                                                                                      
                                            df -l -h | grep -E 'dev/(xvda|sd|mapper)' | \                                                            
                                            awk '{printf "\\\\t%s\\\\t%4s / %4s  %s\\\\n\n", $6, $3, $2, $5}' | \                                    
                                            sed -e 's/^\(.*\([8][5-9]\|[9][0-9]\)%.*\)$/\\\\e[0;31m\1\\\\e[0m/' -e 's/^\(.*\([7][5-9]\|[8][0-4]\)%.*\
)$/\\\\e[0;33m\1\\\\e[0m/' | \                                                                                                                       
)                                                                                                                                                    
                                            paste -sd ''\                                                                                            
                                        )█                                                                                                           
                                                                                                                                                     
                                                                                                                                                     
                                                                                                                                                     
                                                                                                                                                     
                                                                                                                                                     
                                                                                                                                                     
